--- a/components/About/about.module.css
+++ b/components/About/about.module.css
@@ -1,3 +1,20 @@
 .container {
-    color: white;
+  margin: 50px 20px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.container h2 {
+  max-width: 1000px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+.container p {
+  max-width: 1000px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }
