--- a/components/About/about.module.css
+++ b/components/About/about.module.css
@@ -1,9 +1,17 @@
 .container {
   margin: 50px 20px;
-  color: white;
+  padding: 50px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.text_container {
+  color: black;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  
 }
 .container h2 {
   max-width: 1000px;
@@ -13,7 +21,8 @@
 }
 
 .container p {
-  max-width: 1000px;
+  max-width: 400px;
+  color: black;
   display: flex;
   justify-content: center;
   align-self: center;
